package org.trishinfotech.bridge;

public abstract class Stack {
    protected StackImplementor impl;

    // TODO: InLab #3-1 (2) — 생성자에서 impl 주입, 공통 위임 메서드 구현
}
